--- a/.github/workflows/update-translations.yml
+++ b/.github/workflows/update-translations.yml
@@ -11,10 +11,10 @@ jobs:
   update-and-commit-text:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    # have to use v1 due to https://github.com/repo-sync/pull-request/issues/17
+    - uses: actions/checkout@v1
       with:
         submodules: true
-        fetch-depth: 0
 
     - name: update text for translation
       uses: Mudlet/lupdate-action@master
