Only make PR to update translation texts if content changed (#3438)

--- a/.github/workflows/update-translations.yml
+++ b/.github/workflows/update-translations.yml
@@ -1,4 +1,4 @@
-name: Update translations
+name: Update texts for translators
 on:
   push:
     branches:
@@ -11,44 +11,38 @@ jobs:
   update-and-commit-text:
     runs-on: ubuntu-latest
     steps:
-    # have to use v1 due to https://github.com/repo-sync/pull-request/issues/17
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@master
       with:
+        ref: development
         submodules: true
+        fetch-depth: 0
 
     - name: update text for translation
       uses: Mudlet/lupdate-action@master
       with:
         args: -recursive ./src/ ./3rdparty/dblsqd/dblsqd ./3rdparty/edbee-lib/edbee-lib -ts ./translations/mudlet.ts
 
-    - name: commit changes
-      uses: teaminkling/autocommit@master
-      with:
-       commit-message: (autocommit) Updated text for translation
+    - name: check if any UI text was modified
+      id: getdiff
+      run: |
+        # see if we had any changes in the diff, ignoring the <location... changes
+        lines_changed=$(git diff --patch --unified=0 translations/mudlet.ts | awk '! /^((@@|diff|index|---|\+\+\+)|((-|+) *<location))/ { count++ } END { print count }')
+        echo "$lines_changed lines changed."
+        echo ::set-output name=lines_changed::$lines_changed
 
-    - name: create texts branch
-      uses: peterjgrainger/action-create-branch@v1.0.0
+    - name: send in a pull request
+      uses: gr2m/create-or-update-pull-request-action@v1.x
+      if: steps.getdiff.outputs.lines_changed > 0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        branch: updated-text-${{ github.sha }}
-
-    - name: push new text
-      uses: ad-m/github-push-action@v0.5.0
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: updated-text-${{ github.sha }}
-        force: true
-
-    - name: pull-request
-      uses: repo-sync/pull-request@v2
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        source_branch: updated-text-${{ github.sha }}
-        destination_branch: development
-        pr_title: "Update text for translation in Crowdin"
-        pr_body: |
+        title: "Update text for translation in Crowdin"
+        body: |
           #### Brief overview of PR changes/additions
           :crown: An automated PR to make new text available for translation in Crowdin from ${{ github.ref }} (${{ github.sha }}).
           #### Motivation for adding to Mudlet
-          So translators can translate the new text before the upcoming release.
+          So translators can translate the new text before the upcoming release.:
+        branch: update-texts-for-translators-${{ github.sha }}
+        path: translations/
+        commit-message: (autocommit) Updated text for translation
+        author: "mudlet-machine-account <mudlet-machine-account@users.noreply.github.com>"
