--- a/.github/workflows/update-translations.yml
+++ b/.github/workflows/update-translations.yml
@@ -11,7 +11,7 @@ jobs:
   update-and-commit-text:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v2
       with:
         ref: development
         submodules: true
