--- a/.github/workflows/update-3rdparty.yml
+++ b/.github/workflows/update-3rdparty.yml
@@ -252,3 +252,42 @@ jobs:
           path: 3rdparty/lcf
           commit-message: (autocommit) Updated lcf submodule to latest upstream 5.1 branch
           author: "mudlet-machine-account <mudlet-machine-account@users.noreply.github.com>"
+
+  update-whidecharwidth-source:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: development
+
+      - name: download latest from source repo
+        run: |
+          curl -o src/widechar_width.h https://raw.githubusercontent.com/ridiculousfish/widecharwidth/master/widechar_width.h
+
+      # strictly speaking this step isn't necessary since the PR action can filter as well, but it's easier
+      # to see in github UI's if PR creation was skipped when we have an explicit pre-check
+      - name: check if we have any updates
+        id: getdiff
+        run: |
+          lines_changed=$(git diff --patch --unified=0 src/widechar_width.h | wc --lines)
+          echo "$lines_changed lines changed."
+          echo ::set-output name=lines_changed::$lines_changed
+
+      - name: send in a pull request
+        uses: gr2m/create-or-update-pull-request-action@v1.x
+        if: steps.getdiff.outputs.lines_changed > 0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          title: "Update widechar_width.h to latest upstream"
+          body: |
+            #### Brief overview of PR changes/additions
+            :crown: An automated PR to update the built-in `src/widechar_width.h` to its latest version in upstream. We don't include it as a submodule as it's just one file.
+            #### Motivation for adding to Mudlet
+            Better emoji and symbol support! This file helps us tell if a particular character is 0, 1, or 2 widths wide so we can show it correctly in the display.
+            #### Other info (issues closed, discussion etc)
+            _update triggered by ${{ github.ref }} ${{ github.sha }}_
+          branch: update-lcf-${{ github.sha }}
+          path: src/
+          commit-message: (autocommit) Update widechar_width.h to latest upstream
+          author: "mudlet-machine-account <mudlet-machine-account@users.noreply.github.com>"
