--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -57,6 +57,7 @@ set(mudlet_SRCS
     dlgRoomExits.cpp
     dlgScriptsMainArea.cpp
     dlgSourceEditorArea.cpp
+    dlgSourceEditorFindArea.cpp
     dlgSystemMessageArea.cpp
     dlgTimersMainArea.cpp
     dlgTriggerEditor.cpp
@@ -128,6 +129,7 @@ set(mudlet_UIS
   ui/room_exits.ui
   ui/scripts_main_area.ui
   ui/source_editor_area.ui
+  ui/source_editor_find_area.ui
   ui/system_message_area.ui
   ui/timers_main_area.ui
   ui/triggers_main_area.ui
@@ -155,6 +157,7 @@ set(mudlet_HDRS
     dlgRoomExits.h
     dlgScriptsMainArea.h
     dlgSourceEditorArea.h
+    dlgSourceEditorFindArea.h
     dlgSystemMessageArea.h
     dlgTimersMainArea.h
     dlgTriggerEditor.h
