Add a button to manually update autocompletion data (#3646)

--- a/.github/workflows/update-autocompletion.yml
+++ b/.github/workflows/update-autocompletion.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - 'release-**'
+  repository_dispatch:
+    types: update-autocompletion
 
   schedule:
     - cron:  '0 0 * * fri'
