Add Linux build to Github Actions (#3657)
* Add a Ubuntu build

* Install homebrew dependencies only on macOS

* Add Linux dependencies separate

* Don't stop other builds on fail

* Install libzip-dev on Linux

* Sudo please

* Try installing libglu1-mesa-dev

* Install Pulse dev libraries

* Add a workaround for Lua linking

* Correct YAML

* Back to a single line

* Debug locations of libraries

* Correct an extra /

* Build Mudlet with tracing

* Try -GNinja Multi-Config

* Try not specifying a generator

* Add link information against libdl.so as well (#33)

* Add link information against libdl.so as well

* Remove (harmful?) lua library path definition

* Show built output in the end

* Added a run tests flag

* Try appending gcc argument as well

* Debug plugin loading

* Use a single, generic compiler line

* Remove the x's

* Install libxkbcommon-x11-0

* Try launching Achaea profile

* Finalise Linux CI build

* Remove comment

Co-authored-by: keneanung <keneanung@googlemail.com>

--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -8,8 +8,18 @@ jobs:
     name: ${{matrix.os}}
     runs-on: ${{matrix.os}}
     strategy:
+      fail-fast: false
       matrix:
-        os: [macos-latest]
+        os: [ubuntu-latest, macos-latest]
+        include:
+          # - os: windows-latest
+          #   triplet: x64-windows
+          - os: ubuntu-latest
+            triplet: x64-linux
+            compiler: gcc_64
+          - os: macos-latest
+            triplet: x64-osx
+            compiler: clang_64
     env:
       qt: "5.14.1"
 
@@ -40,16 +50,22 @@ jobs:
 
     - name: "Set location of vcpkg dependencies"
       env:
-#         vcpkgResponseFile: ${{github.workspace}}/cmakelists.txt/vcpkg_${{matrix.triplet}}.txt
-          vcpkgResponseFile: ${{github.workspace}}/3rdparty/our-vcpkg-dependencies/.vcpkg-osx-dependencies
+        vcpkgResponseFile: ${{github.workspace}}/3rdparty/our-vcpkg-dependencies/vcpkg-${{matrix.triplet}}-dependencies
       run: |
         echo "::set-env name=vcpkgResponseFile::$vcpkgResponseFile"
       shell: bash
 
-    - name: Install homebrew dependencies
+    - name: (macOS) Install homebrew dependencies
+      if: runner.os == 'macOS'
       run: |
         # these aren't available or don't work well in vcpkg
         brew install pkg-config libzzip libzip
+
+    - name: (Linux) Install apt dependencies
+      if: runner.os == 'Linux'
+      run: |
+        # these aren't available or don't work well in vcpkg
+        sudo apt install pkg-config libzip-dev libglu1-mesa-dev libpulse-dev libxkbcommon-x11-0
 
     # Restore from cache the previously built ports. If "cache miss", then provision vcpkg, install desired ports, finally cache everything for the next run.
     - name: Restore from cache and run vcpkg
@@ -66,4 +82,4 @@ jobs:
         cmakeListsTxtPath: '${{github.workspace}}/CMakeLists.txt'
         useVcpkgToolchainFile: true
         buildDirectory: '${{runner.workspace}}/b/ninja'
-        cmakeAppendedArgs: '-G Ninja -DCMAKE_PREFIX_PATH=${{runner.workspace}}/Qt/${{env.qt}}/clang_64/'
+        cmakeAppendedArgs: -G Ninja -DCMAKE_PREFIX_PATH=${{runner.workspace}}/Qt/${{env.qt}}/${{matrix.compiler}}/
