Enhance: add support for CP437 encoding (#3579)
* Enhance: add support for CP437 encoding

This encoding is often used within the font within the ROM of PC Display
cards and - with a lot of box drawing characters - is popular in some
MUDs for inline map displays.

Additionally I have also managed to include the following extra encodings
that are derived from CP437:
+ CP667 - "Mazovia" Used in MSDOS for Polish.
+ CP737 - Used in MSDOS for Greek, more popular than CP869 but is missing
  a couple of characters.
+ CP869 - Used in MSDOS for Greek, less popular than CP737 but more
  complete.

Hadn't arisen in the past but two of the new ones in the last commit are
not supported by the codecs that Qt provide in the current (5.14.2) version
of it's libraries.

* Enhance: add own encoders for CP437/667/737/869 for use on Win CI builds

Converts the names of the encodings (used internally) from `QString`s to
`QByteArrays` as that is what Qt uses for it's own management of them.

Take the translated Server Encoding name out of the static and thus
immutable TBuffer::csmEncodingTable and put them in a shared
`(QMap<QByteArray, QString>) mudlet::mEncodingNameMap`

Convert the preference dialogue to store the encoder required as a
QDataRole::User data item in each item rather than using the (translated)
text itself. This is more robust and simpler to handle. It also eliminated
the need for a couple of convertors to change between what is being used
internally to identify the encoders and what a user might use as the latter
are not actually used now.

Because of the way we provide the multi-byte decoding of Big5 is done it
turns out that we can supply both Big5-ETen (effectively what Qt provides
as Big5+) and Big5-HKCS, just by asking Qt for the correct one. So both
are now offered.

Check for each 8-bit Extended ASCII encoder on startup and do not offer
encoders that we do not provide - this should eliminate problems between
what the coder

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -96,6 +96,7 @@ set(mudlet_SRCS
     TSplitter.cpp
     TSplitterHandle.cpp
     TTabBar.cpp
+    TTextCodec.cpp
     TTextEdit.cpp
     TTimer.cpp
     TToolBar.cpp
@@ -201,6 +202,7 @@ set(mudlet_HDRS
     TSplitter.h
     TSplitterHandle.h
     TTabBar.h
+    TTextCodec.h
     TTextEdit.h
     TTimer.h
     TToolBar.h
