Add manual buttons for the rest of actions (#3650)
* Add manual buttons for the rest of actions

* Remove extra 'when'

--- a/.github/workflows/update-translations.yml
+++ b/.github/workflows/update-translations.yml
@@ -5,7 +5,9 @@ on:
       - 'release-**'
 
   schedule:
-    - cron:  '0 0 * * fri'
+    - cron: '0 0 * * fri'
+  repository_dispatch:
+    types: update-translations
 
 jobs:
   update-and-commit-text:
