--- a/.github/workflows/update-3rdparty.yml
+++ b/.github/workflows/update-3rdparty.yml
@@ -3,9 +3,11 @@ on:
   push:
     branches:
       - 'release-**'
+  repository_dispatch:
+    types: update-3rdparty
 
   schedule:
-    - cron:  '0 0 * * fri'
+    - cron: '0 0 * * fri'
 
 jobs:
   update-iremapper-source:
