Add action to update Geyser docs (#3668)
* Add action to update Geyser docs

* Don't filter by branch name for testing

* Don't filter by repository either for testing

* Debug print lack of 'modules'

* Fix Geyser docs to actually generate

* Remove debug "find"

* Add ssh action

* Use appleboy/ssh-action instead

* Test uploading with scp...

* Remove 5 leading path components

* Try stripping just one component

* Give names to all actions

* Back to removing first 5 components

* Remove previous docs

* Action ready, uncomment debug tests

* Strip traling spaces

--- a/.actionspanel/buttons.yml
+++ b/.actionspanel/buttons.yml
@@ -10,3 +10,7 @@ buttons:
   - title: Update text for translators
     action: update-translations
     description: "Update text available in Crowdin for translation."
+
+  - title: Update Geyser docs
+    action: update-geyser-docs
+    description: "Update Geyser documentation on https://www.mudlet.org/geyser/files/index.html."
