--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -259,6 +259,15 @@ find_package(PUGIXML REQUIRED)
 find_package(HUNSPELL REQUIRED)
 find_package(Boost 1.44)
 
+if(NOT USE_OWN_QT5KEYCHAIN)
+  # Only use this when we are using a system package and NOT our own local build
+  find_package(Qt5Keychain REQUIRED)
+
+  # No need to test for it being found as the REQUIRED will make it error out
+  # if it is NOT found!
+  message(STATUS "Using system QtKeyChain (Qt5) library (found version \"${Qt5Keychain_VERSION}\").")
+endif()
+
 if(USE_3DMAPPER)
   if(POLICY CMP0072)
     cmake_policy(SET CMP0072 NEW)
@@ -288,17 +297,23 @@ endif(UNIX)
 # Define a preprocessor symbol with the default fallback location from which to
 # load installed mudlet lua files. Set LUA_DEFAULT_DIR to a platform-specific
 # value. If LUA_DEFAULT_DIR is unset, the root directory will be used.
-target_compile_definitions(
-  mudlet
-  PRIVATE APP_VERSION="${APP_VERSION}" APP_BUILD="${APP_BUILD}"
-          APP_TARGET="${APP_TARGET}" LUA_DEFAULT_PATH="${LUA_DEFAULT_DIR}"
-          QTKEYCHAIN_NO_EXPORT)
+target_compile_definitions(mudlet
+  PRIVATE
+    APP_VERSION="${APP_VERSION}"
+    APP_BUILD="${APP_BUILD}"
+    APP_TARGET="${APP_TARGET}"
+    LUA_DEFAULT_PATH="${LUA_DEFAULT_DIR}")
+
+if(USE_OWN_QT5KEYCHAIN)
+    # An extra definition is needed if we are using our own QtKeyChain to not
+    # export symbols from our self-built library:
+    target_compile_definitions(mudlet PRIVATE INCLUDE_OWN_QT5_KEYCHAIN QTKEYCHAIN_NO_EXPORT)
+endif()
 
 target_link_libraries(
   mudlet
   communi
   edbee-lib
-  qt5keychain
   Boost::boost
   HUNSPELL::HUNSPELL
   LUA51::LUA51
@@ -313,7 +328,8 @@ target_link_libraries(
   Qt5::Widgets
   YAJL::YAJL
   ZIP::ZIP
-  ZLIB::ZLIB)
+  ZLIB::ZLIB
+  qt5keychain)
 
 if(Qt5TextToSpeech_FOUND)
   target_link_libraries(mudlet Qt5::TextToSpeech)
