Trim apt update comment (#3684)
* Trim apt update comment

* Trim even more

--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -64,12 +64,8 @@ jobs:
     - name: (Linux) Install apt dependencies
       if: runner.os == 'Linux'
       run: |
+        # Installing packages might fail as the github image becomes outdated
         sudo apt update
-        # The above is enough to tell the OS's package system what versions
-        # of package it needs to get to install the following (so it does
-        # not error out by asking for older, no-longer available upstream
-        # versions - which was happening) whilst not burdening the run
-        # with a much more time consuming full system "upgrade".
         # These aren't available or don't work well in vcpkg
         sudo apt install pkg-config libzip-dev libglu1-mesa-dev libpulse-dev libxkbcommon-x11-0
 
